--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,8 +3,8 @@ githubpush:
   script:
     - mkdir ${HOME}/.ssh
     - echo "${github_ssh_privkey_base64}" | base64 -d > ${HOME}/.ssh/id_ed25519
-    - chmod u=rw ${HOME}/.ssh/id_ed25519
-    - chmod u=rwx ${HOME}/.ssh
+    - chmod 0600 ${HOME}/.ssh/id_ed25519
+    - chmod 0700 ${HOME}/.ssh
     - echo ${HOME}/.ssh
     - ls -laFh ${HOME}
     - ls -laFh ${HOME}/.ssh
