--- a/.gitlab/githubpush.yml
+++ b/.gitlab/githubpush.yml
@@ -7,6 +7,7 @@ githubpush:
     - chmod 0600 ${HOME}/.ssh/known_hosts
     - chmod 0600 ${HOME}/.ssh/id_ed25519
     - chmod 0700 ${HOME}/.ssh
+    - git fetch --all --tags -v
     - git remote add github git@github.com:sspreitzer/kube-soe.git
     - git remote -v
     - git show-ref
